removed/rssfeed/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rssfeed-deployment
  labels:
    app: rssfeed
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rssfeed
  template:
    metadata:
      name: rssfeed-pod
      labels:
        app: rssfeed
    spec:
      containers:
        - name: rssfeed-container
          image: athou/commafeed:5.6.1-h2
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: rssfeed-storage
              mountPath: /commafeed/data
      volumes:
        - name: rssfeed-storage
          persistentVolumeClaim:
            claimName: rssfeed-pvc
