removed/rssfeed/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rssfeed-service
  labels:
    app: rssfeed
  namespace: personal
spec:
  selector:
    app: rssfeed
  type: ClusterIP
  ports:
    - targetPort: 8082
      port: 80
