removed/rssfeed/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rssfeed-ingress
  namespace: personal
spec:
  rules:
    - host: feed.yorch.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rssfeed-service
                port:
                  number: 80
  tls:
    - hosts:
        - feed.yorch.cloud
      secretName: rssfeed-certificate
